.env documentation fix: spring 1
