# src/Routes/user.routes.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const {signUp, resendVerifyCode, verifyCode, signIn, resend2FACode, verify2FACode,
-    sendresetPassword, sendforgotPassword, resetpassword, forgotpassword
+    sendresetPassword, sendforgotPassword, resetpassword, forgotpassword, getUserById
 } = require('../controllers/user.controller');
 
 router.post('/SignUp', signUp);
@@ -14,5 +14,6 @@ router.post('/SendResetPassword', sendresetPassword);
 router.post('/SendForgotPassword', sendforgotPassword);
 router.post('/ResetPassword', resetpassword);
 router.post('/ForgotPassword', forgotpassword);
+router.get('/GetUserById/:id', getUserById);
 
 module.exports = router;
