# src/models/signInRequest.js
@@ -1,15 +1,15 @@
 class signInRequest {
-    constructor(userName, password) {
-        this.userName = userName;
+    constructor(user_name, password) {
+        this.user_name = user_name;
         this.password = password;
-        this.emailNotification = emailNotification;
+        this.email_notification = email_notification;
     }
   
     static validate(data) {
-        const { userName, password, emailNotification } = data;
+        const { user_name, password, email_notification } = data;
         const errors = [];
   
-        if (!userName || userName.length < 5) {
+        if (!user_name || user_name.length < 5) {
             errors.push("User name must be at least 5 characters long.");
         }
   
@@ -17,7 +17,7 @@ class signInRequest {
             errors.push("Password must be at least 6 characters long.");
         }
 
-        if (emailNotification !== undefined && typeof emailNotification !== 'boolean') {
+        if (email_notification !== undefined && typeof email_notification !== 'boolean') {
             errors.push("Email notification must be a boolean value.");
         }
   
