# src/models/signUpRequest.js
@@ -1,18 +1,19 @@
 class signUpRequest {
-    constructor(userName, email, phone, password, rolName, emailNotification) {
-        this.userName = userName;
+    constructor(user_name, email, phone, password, rol_name, email_notification, full_name) {
+        this.user_name = user_name;
         this.email = email;
         this.phone = phone;
         this.password = password;
-        this.rolName = rolName;
-        this.emailNotification = emailNotification;
+        this.rol_name = rol_name;
+        this.email_notification = email_notification;
+        this.full_name = full_name;
     }
   
     static validate(data) {
-        const { userName, email, phone, password, rolName, emailNotification } = data;
+        const { user_name, email, phone, password, rol_name, email_notification } = data;
         const errors = [];
   
-        if (!userName || userName.length < 5) {
+        if (!user_name || user_name.length < 5) {
             errors.push("User name must be at least 5 characters long.");
         }
   
@@ -23,19 +24,22 @@ class signUpRequest {
         if (!phone || phone.length < 10) {
             errors.push("Phone number must be at least 10 digits long.");
         }
-  
-        if (!password || password.length < 6) {
-            errors.push("Password must be at least 6 characters long.");
+            
+        if (!password || password.length < 8 || password.length > 20 || !/\d/.test(password) || !/[a-zA-Z]/.test(password) || !/[!@#$%^&*(),.?":{}|<>]/.test(password)) {
+            errors.push("Password must be between 8 and 20 characters long, contain at least one letter, one number, and one special character.");
         }
   
-        if (!rolName) {
+        if (!rol_name) {
             errors.push("Role name is required.");
         }
         
-        if (emailNotification !== undefined && typeof emailNotification !== 'boolean') {
+        if (email_notification !== undefined && typeof email_notification !== 'boolean') {
             errors.push("Email notification must be a boolean value.");
         }
 
+        if (!data.full_name || data.full_name.length < 5) {
+            errors.push("Full name must be at least 5 characters long.");
+        }
         return errors.length > 0 ? errors : null;
     }
   }
